--- a/index.html
+++ b/index.html
@@ -11,9 +11,63 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Montserrat:wght@400;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/efe748bb0a.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+
+    <div class="counter-app">
+
+        <div class="settings active">
+            <h1>Ustawienia</h1>
+            <label for="event-name">Nazwa wydarzenia:</label>
+            <input type="text" id="event-name" value="Nowy rok">
+            <table class="date">
+                <tr>
+                    <td><label for="event-day">Dzień:</label></td>
+                    <td><label for="event-month">Miesiąc:</label></td>
+                    <td><label for="event-year">Rok:</label></td>
+                </tr>
+                <tr>
+                    <td><input type="number" id="event-day" maxlenght="2" value="1"></td>
+                    <td><input type="number" id="event-month" maxlenght="2" value="1"></td>
+                    <td><input type="number" id="event-year" maxlenght="4" value="2024"></td>
+                </tr>
+            </table>
+
+            <label for="event-image">Link do obrazka:</label>
+            <input type="text" id="event-image" value="default.jpg">
+            <button class="save">Zapisz</button>
+        </div>
+
+        <div class="app-body">
+            <div class="image-section">
+                <div class="settings-btn"><i class="fas fa-sliders-h"></i></div>
+            </div>
+            <div class="time-section">
+                <h3><span class="event">Nowy rok</span> za:</h3>
+                <div class="time-cards">
+                    <div class="card">
+                        <p class="days-count number">1</p>
+                        <p class="card-title">Dni:</p>
+                    </div>
+                    <div class="card">
+                        <p class="hours-count number">1</p>
+                        <p class="card-title">Godziny:</p>
+                    </div>
+                    <div class="card">
+                        <p class="minutes-count number">1</p>
+                        <p class="card-title">Minuty:</p>
+                    </div>
+                    <div class="card">
+                        <p class="seconds-count number">1</p>
+                        <p class="card-title">Sekundy:</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
 
 
     <script src="script.js"></script>
